Add github webhook capability
Fixes #181
